<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/text_login"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/text_multipay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/text_multipay"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/text_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_multipay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/text_insert"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/text_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_insert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/text_update"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/text_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_update"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/text_delete"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/text_start_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_delete"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/text_start_service"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/text_stop_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_start_service"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/text_stop_service"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/text_open_listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_stop_service"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/text_open_listview"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
     <TextView
        android:id="@+id/text_sound_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_open_listview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/text_sound_record"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    
    <!-- 
    <ScrollView
        android:id="@+id/sv_show"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/text_multipay"
        android:background="#000000"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/ll_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/text_output"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:textColor="#FFFFFF"
                android:fadeScrollbars="false"
                android:singleLine="false"
        		android:textSize="13sp"/>
        </LinearLayout>
        
    </ScrollView>

 -->

</RelativeLayout>